@@ -404,9 +404,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <argLine>@{argLine} -Djava.awt.headless=true</argLine>
-                        <reuseForks>false</reuseForks>
-                        <forkCount>1</forkCount>
+                        <argLine>@{argLine} -Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <reuseForks>true</reuseForks>
+                        <forkCount>3</forkCount>
                     </configuration>
                 </plugin>
                 <plugin>
